Kubus staat correct, nog problemen met de knoppen

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 <body>
     <body>
+        <input type="radio" name="clickTurn" class="radioTurn">
+        <input type="radio" name="clickTurn" class="radioTurn2">
+        <label>
+            up/down
+        </label>
+        <input type="radio" name="clickDown" class="radioDown">
+        <input type="radio" name="clickDown" class="radioDown2">
+        <input type="radio" name="clickDown" class="radioDown3">
+        <input type="radio" name="clickDown" class="radioDown4">
+        <!-- <label for="">Turn Sideways</label> -->
         <main>
             <section>
                 <ul>
