:rocket: Final Version

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <label for="radioturn2">Up</label>
 
         <input type="radio" name="invert" id="invert">
-        <input type="radio" name="invert" id="invertback">
+        <input type="radio" name="invert" id="invertback" checked>
         <label for="invert">Invert colors</label>
         <label for="invertback">Invert colors</label>
 
